[package]
name = "client"
version = "0.1.0"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

[dependencies]

protocol = { path = "../protocol" }
common = { path = "../common" }

thiserror = "1.0"
futures = "0.3"
bytes = "1.0"
serde = "1.0"
rmp-serde = "0.13.7"
log = "0.4"
tokio = { version ="1.0", features = ["sync"] }

[dev-dependencies]

server = { path = "../server" }
kvstore-binary = { git="https://github.com/RicoGit/async-kvstore.git", branch="master" }
kvstore-inmemory = { git="https://github.com/RicoGit/async-kvstore.git", branch="master" }

env_logger = "0.8"
tokio = { version ="1.0", features = ["full"] }
