[package]
name = "common"
version = "0.1.0"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

[dependencies]

# Bytes
bytes = {version = "0.4", features = ["serde"] }
# Serde
serde = "1.0"
serde_derive = "1.0"
# Hasher (see https://github.com/RustCrypto/hashes)
sha3 = "0.8"
