[package]
name = "common"
version = "0.1.1"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

[dependencies]

# Bytes
bytes = { version = "1", features = ["serde"] }
# Serde
serde = { version = "1", features = ["derive"] }

# Hasher (see https://github.com/RustCrypto/hashes)
sha3 = "0.9"

thiserror = "1.0"
