[package]
name = "common"
version = "0.1.1"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2021"

[dependencies]

# Bytes
bytes = { version = "1", features = ["serde"] }
hex = "0.4.3"
# Serde
serde = { version = "1", features = ["derive"] }

# Hasher (see https://github.com/RustCrypto/hashes)
digest = "0.9"

thiserror = "1.0"

[dev-dependencies]
sha3 = "0.9"
