[package]
name = "integration_test"
version = "0.1.1"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]

client = { path = "../client", features = ["test"]}
server = { path = "../server" }
common = { path = "../common" }
protocol = { path = "../protocol" }
kvstore-binary = { git="https://github.com/RicoGit/async-kvstore.git", branch="master" }
kvstore-inmemory = { git="https://github.com/RicoGit/async-kvstore.git", branch="master" }

env_logger = "0.8"
bytes = "1.0"
log = "0.4"
tokio = { version ="1.0", features = ["full"] }
futures = "0.3"
