[package]
name = "server"
version = "0.1.0"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

[dependencies]

common = { path = "../common" }
protocol = { path = "../protocol" }

async-kvstore = { git="https://github.com/RicoGit/async-kvstore.git", branch="master" }
error-chain = "0.12.0"

# Futures
tokio = "0.1"
futures = "0.1"
futures-locks = "0.3"

# Serde
serde = "1.0"
serde_derive = "1.0"
# MessagePack + Serde
rmpv = { features = ["with-serde"], version = "0.4" }
rmp-serde = "0.13.7"
# Bytes
bytes = {version = "0.4", features = ["serde"] }
