[package]
name = "server"
version = "0.1.1"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

[dependencies]

common = { path = "../common" }
protocol = { path = "../protocol" }

#async-kvstore = { git="https://github.com/RicoGit/async-kvstore.git", branch="master" }
async-kvstore = { path="../../../async-kvstore/" }
thiserror = "1.0"

# Futures
tokio = { version ="1.0", features = ["full"] }
futures = "0.3.12"

# Serde
serde = { version = "1.0", feature = ["derive"]}

# MessagePack + Serde (why message pack - crossplatform? Consider bincode?)
rmpv = { version = "0.4", features = ["with-serde"]  }
rmp-serde = "0.13.7"

# Bytes
bytes = {version = "1.0", features = ["serde"] }
