[package]
name = "client-grpc"
version = "0.1.0"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"
build = "../../build.rs"

[dependencies]

client = { path = "../", features = ["test"]}
common = { path = "../../common" }
protocol = { path = "../../protocol" }

log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
tokio = { version ="1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1.5"
bytes = "1.0"

# Grpc
tonic = "0.4.1"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "client-grpc"
path = "src/main.rs"