[package]
name = "server-grpc"
version = "0.1.0"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"
build = "../../build.rs"

[dependencies]

server = { path = "../" }
common = { path = "../../common" }
protocol = { path = "../../protocol" }
kvstore-api = { git="https://github.com/RicoGit/async-kvstore.git", branch="master" }
kvstore-inmemory = { git="https://github.com/RicoGit/async-kvstore.git", branch="master" }

log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
tokio = { version ="1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1.5"
#async-stream = "0.3"

# Grpc
tonic = "0.4.1"
prost = "0.7"

[build-dependencies]
# building Grpc
tonic-build = "0.4"
prost-build ="0.7"

[[bin]]
name = "server-grpc"
path = "src/main.rs"